update background image to prevent white space when address bar minimizes on mobile while scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,10 @@
 }
 
 html {
-    background-image: url('images/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
     color: white;
     overflow-x: hidden;
 }
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -21,6 +18,19 @@ body {
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.background-image {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    height: 115vh;
+    z-index: -1;
+    overflow-x: hidden;
+    background-image: url('images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 95% center;
 }
 
 .row {
