--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -64,7 +64,7 @@
     
         max-width: $max-content-width;
         min-width: $max-content-width;
-        height: 110%;
+        height: 130%;
     
         position: fixed;
         top: -15px;
